# velat

./: AUTHORS  COPYING  INSTALL  Makefile  README  README.rst  ipython_velat  run_tests.sh  setup.cfg
src/: start_gui  start_ipython
src/velat/: Makefile  base.py  editors.py  expense_edit.ui  gui.py  gui.ui  models.py  person_edit.ui  transfer_edit.ui  types.py  velat.py
velat/: __init__.py  algo.py  base.py  test_velat.py  velat.py
