[metadata]
name = velat_core
version = 0.1
author = Feth Arezki
author_email = feth >AT< tuttu dot info
summary = A tool for sorting money matters between friends
description_file = README.rst
keywords = money, friends
home_page = https://github.com/feth/velat_core
requires_python >= 2.6.1
license = GNU Affero General Public License v3
classifier =
    License :: OSI Approved :: GNU Affero General Public License v3
    Intended Audience :: End Users/Desktop
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 2.6
    Topic :: Office/Business :: Financial :: Accounting
requires_dist =
    peinard

[files]
packages=velat
scripts =
    ipython_velat
extra_files =
    setup.cfg
    setup.py
    AUTHORS
    COPYING
    MANIFEST.in
    README.rst
